# ORDO_smart_file_organizer

./: .gitignore  README.md  organizer.py  pyproject.toml  requirements.txt  test_organizer.py
backend/: pyproject.toml  requirements.txt
backend/src/file_organizer/: api.py  config.py  core.py
backend/tests/: base_test.py  test_cli.py
frontend/: .eslintrc.json  .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/.husky/: pre-commit
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: file-organizer-interface.tsx
frontend/components/ui/: pagination.tsx  sidebar.tsx  slider.tsx  use-toast.ts
frontend/lib/api/: client.ts  organizer.ts
frontend/tests/mocks/: browser.ts  handlers.ts
frontend/types/: organizer.ts
src/file_organizer/: cli.py  config.py  core.py
tests/: base_test.py  test_cli.py  test_config_management.py  test_core_logic.py  test_interactive_flows.py
