[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ORDO_smart_file_organizer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "platformdirs>=4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
ordo     = "file_organizer.__main__:main"
ordo-api = "file_organizer.api:run"

[tool.setuptools.packages.find]
where = ["src"]
